Allow only 1 Host per room

--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
                       <input type="text" class="form-control" id="playerPin">
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="true" id="isHost">
+                      <input class="form-check-input" type="checkbox" value="true" id="isHost" disabled>
                       <label class="form-check-label" for="isHost"> Host</label>
                     </div>
                   </form>                
