--- a/client/index.html
+++ b/client/index.html
@@ -136,7 +136,8 @@
                     <input class="form-check-input" type="checkbox" value="true" id="joinIsHost" disabled>
                     <label class="form-check-label" for="joinIsHost"> Host</label>
                   </div>
-                </form>                
+                </form>
+                <div id="joinErrorMsg" class="errorText"></div>              
           </div>
           <div class="modal-footer">
               <button class="btn btn-primary" onclick="playerApp.join();">Join</button>
