Moved Server Socket processing to Class

--- a/client/index.html
+++ b/client/index.html
@@ -186,8 +186,8 @@
                 <legend class="col-sm-2 col-form-label">Choice Mode:</legend>
                 <div class="col-lg-10">
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="pickDealerOpt" id="pickDealerAuto" value="Auto">
-                    <label class="form-check-label" for="pickDealerAuto">Random</label>
+                    <input class="form-check-input" type="radio" name="pickDealerOpt" id="pickDealerRandom" value="Random">
+                    <label class="form-check-label" for="pickDealerRandom">Random</label>
                   </div>
                   <div class="form-check">
                     <input class="form-check-input" type="radio" name="pickDealerOpt" id="pickDealerManual" value="Manual">
@@ -235,7 +235,7 @@
 <script src="./client/js/libs/lodash.js"></script>
 <script src="./client/js/libs/accounting.min.js"></script>
 <script src="./client/js/libs/uuidv4.min.js"></script>
-<script src="./client/js/Socket.js"></script>
+<script src="./client/js/socket.js"></script>
 <script src="./client/js/DomHelpers.js"></script>
 <script src="./client/js/player.js"></script>
 <script src="./client/js/hostDialog.js"></script>
