--- a/client/index.html
+++ b/client/index.html
@@ -216,6 +216,17 @@
             <div class="row">
               <div class="col-lg-12">To Do</div>
             </div>
+            <div class="form-group row">
+              <div class="col-lg-2"></div>
+              <div class="col-lg-10">
+                <button id="setAnteModeButton" type="button" class="btn btn-primary">Process</button>
+              </div>
+            </div>
+            <div class="spacer"></div>
+
+            <div class="row">
+              <div class="col-lg-12 errorText" id="hostErrorMsg"></div>
+            </div>          
 
           </div>
           <div class="modal-footer">
