--- a/client/index.html
+++ b/client/index.html
@@ -101,7 +101,7 @@
             <div class="col-xl-12 no-padding-lr"><h5>Player Info:</h5></div>
           </div>
           <div id="playerInfoArea"></div>
-        </div>
+        </div> <!-- Player Info -->
         
         <!-- Hand Info -->
         <div class="info-container border-b">
@@ -109,7 +109,7 @@
             <div class="col-xl-12 no-padding-lr"><h5>Hand Info:</h5></div>
           </div>
           <div id="handInfoArea"></div>
-        </div>
+        </div> <!-- Hand Info -->
 
         <!-- Commands -->
         <div class="info-container">
@@ -118,8 +118,33 @@
                 <h5>Dealer Commands:</h5>
             </div>
           </div>
-          <div id="dealerCommandArea"></div>
-        </div>
+          <div id="dealerCommandArea">
+            <div class="row row-padding">
+              <div class="col-xl-3">Mode:</div>
+              <div class="col-xl-9">
+                <input type="radio" name="dealModes" id="faceDown" value="D" checked> - Face Down &nbsp;&nbsp;
+                <input type="radio" name="dealModes" id="faceUp" value="U"> - Face Up
+              </div>
+            </div>
+            <div class="row row-padding">
+              <div class="col-xl-3">Deal:</div>
+              <div class="col-xl-9">
+                <button class="btn btn-sm btn-light btn-margin">Deal to All</button><br/>
+                <button class="btn btn-sm btn-light btn-margin">Deal to Next</button><br/>
+                <button class="btn btn-sm btn-light btn-margin">Deal to Specific</button> 
+              </div>
+            </div>
+            <div class="row row-padding">
+              <div class="col-xl-3">Other:</div>
+              <div class="col-xl-9">
+                <button class="btn btn-sm btn-warning btn-margin">Request Payment</button><br/>
+                <button class="btn btn-sm btn-primary btn-margin">Initiate Betting</button><br/>
+                <button class="btn btn-sm btn-danger btn-margin">End Hand</button><br/>
+                <button class="btn btn-sm btn-danger btn-margin">Re-Deal Hand</button> 
+              </div>
+            </div>
+          </div>
+        </div> <!-- Commands -->
 
       </div> <!-- Right Area Div-->
 
@@ -234,9 +259,40 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  
+    </div> <!-- Host Dialog -->
+
+    <!-- Hand Setup Dialog -->
+    <div class="modal" tabindex="-1" role="dialog" id="handSetupDialog">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Hand Setup</h5>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="handGameName">Game Name</label>
+                <input type="text" class="form-control" id="handGameName">
+              </div>
+              <div class="form-group">
+                <label for="handWildCardText">Wild Card(s)</label>
+                <input type="text" class="form-control" id="handWildCardText">
+              </div>
+              <div class="form-group">
+                <label for="handAnteAmount">Ante Amount</label>
+                <input type="text" class="form-control" id="handAnteAmount">
+              </div>
+            </form>
+            <div id="handSetupErrorMsg" class="errorText"></div>              
+          </div>
+          <div class="modal-footer">
+              <button id="handSetupButton" type="button" class="btn btn-primary">Start Hand</button>
+          </div>
+        </div>
+      </div>
+    </div> <!-- Hand Setup Dialog-->
+
+  </div> <!-- Main Container -->
 
 </body>
 </html>
@@ -250,6 +306,7 @@
 <script src="./client/js/DomHelpers.js"></script>
 <script src="./client/js/player.js"></script>
 <script src="./client/js/hostDialog.js"></script>
+<script src="./client/js/dealerController.js"></script>
 <script src="./client/js/playerApp.js"></script>
 
 <script>
