WIP - Implementing Hand Setup

--- a/client/index.html
+++ b/client/index.html
@@ -286,7 +286,7 @@
             <div id="handSetupErrorMsg" class="errorText"></div>              
           </div>
           <div class="modal-footer">
-              <button id="handSetupButton" type="button" class="btn btn-primary">Start Hand</button>
+              <button id="handStartButton" type="button" class="btn btn-primary">Start Hand</button>
           </div>
         </div>
       </div>
