--- a/client/index.html
+++ b/client/index.html
@@ -125,8 +125,8 @@
             <div class="row row-padding">
               <div class="col-xl-3">Mode:</div>
               <div class="col-xl-9">
-                <input type="radio" name="dealModes" id="faceDown" value="D" checked> - Face Down &nbsp;&nbsp;
-                <input type="radio" name="dealModes" id="faceUp" value="U"> - Face Up
+                <input type="radio" name="dealMode" id="faceDown" value="D" checked> - Face Down &nbsp;&nbsp;
+                <input type="radio" name="dealMode" id="faceUp" value="U"> - Face Up
               </div>
             </div>
             <div class="row row-padding">
