--- a/client/index.html
+++ b/client/index.html
@@ -29,13 +29,13 @@
               <div class="row">
                 <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-3></h5></div>
               </div>
-              <div id="opponentCards-3"></div>
+              <div class="card-container" id="opponentCards-3"></div>
           </div>      
           <div class="col-xl-6 opponent-container border-l">
             <div class="row">
               <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-4></h5></div>
             </div>
-            <div id="opponentCards-4"></div>
+            <div class="card-container" id="opponentCards-4"></div>
           </div>      
         </div>
 
@@ -45,13 +45,13 @@
             <div class="row">
               <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-2></h5></div>
             </div>
-            <div id="opponentCards-2"></div>
+            <div class="card-container" id="opponentCards-2"></div>
           </div>      
           <div class="col-xl-6 opponent-container border-l">
             <div class="row">
               <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-5></h5></div>
             </div>
-            <div id="opponentCards-5"></div>
+            <div class="card-container" id="opponentCards-5"></div>
           </div>      
         </div>
 
@@ -61,13 +61,13 @@
             <div class="row">
               <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-1></h5></div>
             </div>
-            <div id="opponentCards-1"></div>
+            <div class="card-container" id="opponentCards-1"></div>
           </div>      
           <div class="col-xl-6 opponent-container border-l">
             <div class="row">
               <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-6></h5></div>
             </div>
-            <div id="opponentCards-6"></div>
+            <div class="card-container" id="opponentCards-6"></div>
           </div>      
         </div>
 
@@ -82,7 +82,7 @@
             </div>
             <div class="row">
               <div class="col-xl-10 no-padding-lr">
-                <div id="playerCards"></div>
+                <div class="card-container" id="playerCards"></div>
               </div>          
               <div class="col-xl-2">
                 <div id="optionArea"></div>
@@ -312,6 +312,7 @@
 <script src="./client/js/dealerController.js"></script>
 <script src="./client/js/HandPlayer.js"></script>
 <script src="./client/js/Hand.js"></script>
+<script src="./client/js/Card.js"></script>
 <script src="./client/js/playerApp.js"></script>
 
 <script>
