Implemented "DealToNext" and "DealToSpecific" functionality.

--- a/client/index.html
+++ b/client/index.html
@@ -27,13 +27,19 @@
         <div class="row border-b">
           <div class="col-xl-6 opponent-container">
               <div class="row">
-                <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-3></h5></div>
+                <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-3></h5></div>
+                <div class="col-xl-9 no-padding-lr align-right">
+                  <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-3">Select</button>  
+                </div>
               </div>
               <div class="card-container" id="opponentCards-3"></div>
           </div>      
           <div class="col-xl-6 opponent-container border-l">
             <div class="row">
-              <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-4></h5></div>
+              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-4></h5></div>
+              <div class="col-xl-9 no-padding-lr align-right">
+                <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-4">Select</button>  
+              </div>
             </div>
             <div class="card-container" id="opponentCards-4"></div>
           </div>      
@@ -43,13 +49,19 @@
         <div class="row border-b">
           <div class="col-xl-6 opponent-container">
             <div class="row">
-              <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-2></h5></div>
+              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-2></h5></div>
+              <div class="col-xl-9 no-padding-lr align-right">              
+                <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-2">Select</button>  
+              </div>
             </div>
             <div class="card-container" id="opponentCards-2"></div>
           </div>      
           <div class="col-xl-6 opponent-container border-l">
             <div class="row">
-              <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-5></h5></div>
+              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-5></h5></div>
+              <div class="col-xl-9 no-padding-lr align-right">              
+                <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-5">Select</button>  
+              </div>
             </div>
             <div class="card-container" id="opponentCards-5"></div>
           </div>      
@@ -59,13 +71,19 @@
         <div class="row border-b"> 
           <div class="col-xl-6 opponent-container">
             <div class="row">
-              <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-1></h5></div>
+              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-1></h5></div>
+              <div class="col-xl-9 no-padding-lr align-right">              
+                <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-1">Select</button>  
+              </div>
             </div>
             <div class="card-container" id="opponentCards-1"></div>
           </div>      
           <div class="col-xl-6 opponent-container border-l">
             <div class="row">
-              <div class="col-xl-12 no-padding-lr"><h5 id=opponentName-6></h5></div>
+              <div class="col-xl-3 no-padding-lr"><h5 id=opponentName-6></h5></div>
+              <div class="col-xl-9 no-padding-lr align-right">              
+                <button class="btn btn-sm btn-light btn-margin select-player" id="selectPlayer-6">Select</button>  
+              </div>
             </div>
             <div class="card-container" id="opponentCards-6"></div>
           </div>      
@@ -75,9 +93,10 @@
         <div class="row"> 
           <div class="col-xl-12 player-container">
             <div class="row">
-              <div class="col-xl-10 no-padding-lr"><h5 id=playerName></h5></div>
-              <div class="col-xl-2 no-padding-lr align-right">
-                <button id="hostOpenDialogButton" type="button" class="btn btn-dark">Host Commands</button>                
+              <div class="col-xl-3 no-padding-lr"><h5 id=playerName></h5></div>
+              <div class="col-xl-9 no-padding-lr align-right">
+                <button class="btn btn-sm btn-light btn-margin select-player" id="selectMe">Select</button>
+                <button id="hostOpenDialogButton" type="button" class="btn btn-sm btn-dark">Host Commands</button>                
               </div>
             </div>
             <div class="row">
