Added "Fold" logic, Betting button setup and Display Update for Hand Player Info.

--- a/client/index.html
+++ b/client/index.html
@@ -106,10 +106,10 @@
               <div class="col-xl-2">
                 <!-- Bet Area-->                
                 <div id="betArea">
-                  <button class="btn btn-sm btn-light btn-margin" id="betCheck">Check</button><br/>
-                  <button class="btn btn-sm btn-light btn-margin" id="betCall">Call</button><br/>
-                  <button class="btn btn-sm btn-warning btn-margin" id="betBetRaise">Bet/Raise</button><br/>
-                  <button class="btn btn-sm btn-danger btn-margin" id="betFold">Fold</button>                   
+                  <div id="betCheckDiv"><button class="btn btn-sm btn-light btn-margin" id="betCheck">Check</button></div>
+                  <div id="betCallDiv"><button class="btn btn-sm btn-light btn-margin" id="betCall">Call</button></div>
+                  <div id="betBetRaiseDiv"><button class="btn btn-sm btn-warning btn-margin" id="betBetRaise">Bet/Raise</button></div>
+                  <div id="betFoldDiv"><button class="btn btn-sm btn-danger btn-margin" id="betFold">Fold</button></div>   
                 </div>
 
               </div>          
