Cleaned up Bet/Check logic and added Show All Hands.

--- a/client/index.html
+++ b/client/index.html
@@ -170,6 +170,7 @@
               <div class="col-xl-9">
                 <button class="btn btn-sm btn-warning btn-margin" id="requestPayment">Request Payment</button><br/>
                 <button class="btn btn-sm btn-primary btn-margin" id="initiateBetting">Initiate Betting</button><br/>
+                <button class="btn btn-sm btn-danger btn-margin" id="endShowHands">Show All Hands</button>
                 <button class="btn btn-sm btn-danger btn-margin" id="endHand">End Hand</button><br/>
                 <button class="btn btn-sm btn-danger btn-margin" id="reDealHand">Re-Deal Hand</button> 
               </div>
