Implementing Payout Split

--- a/client/index.html
+++ b/client/index.html
@@ -397,7 +397,7 @@
           </div>
           <div class="modal-footer">
             <button id="payoutSubmit" type="button" class="btn btn-primary">Submit</button>
-            <button id="payoutCancel" type="button" class="btn btn-warning">Cancel</button>
+            <button id="payoutCancel" type="button" class="btn btn-danger">Cancel</button>
           </div>
         </div>
       </div>
