Implemented Payout and Deck Disposition

--- a/client/index.html
+++ b/client/index.html
@@ -181,7 +181,7 @@
           </div>
 
           <!-- Initiate Betting Commands -->
-          <div id="initBetCommandArea" class="init-bet-command">
+          <div id="initBetCommandArea" class="dealer-command-none">
             <div class="row row-padding">
               <div class="col-xl-3">Bet Initiate:</div>
               <div class="col-xl-9">
@@ -190,7 +190,17 @@
                 <button class="btn btn-sm btn-danger btn-margin" id="initiateBettingCancel">Cancel</button><br/>
               </div>
             </div>
+          </div>
 
+          <!-- Deck Disposition Commands -->
+          <div id="deckDispositionArea" class="dealer-command-none">
+            <div class="row row-padding">
+              <div class="col-xl-3">Disposition:</div>
+              <div class="col-xl-9">
+                <button class="btn btn-sm btn-light btn-margin" id="deckPass">Pass the Deck</button><br/>
+                <button class="btn btn-sm btn-light btn-margin" id="deckDealAgain">Deal Again</button><br/>
+              </div>
+            </div>
           </div>
 
         </div> <!-- Commands -->
