Deck/Muck Handling and Deal Enhancements/Cleanups

--- a/client/index.html
+++ b/client/index.html
@@ -185,8 +185,8 @@
             <div class="row row-padding">
               <div class="col-xl-3">Bet Initiate:</div>
               <div class="col-xl-9">
-                <button class="btn btn-sm btn-primary btn-margin" id="initiateBettingNext">Start with Next</button><br/>
-                <button class="btn btn-sm btn-primary btn-margin" id="initiateBettingSpecific">Start with Specific</button><br/>
+                <button class="btn btn-sm btn-primary btn-margin bet-button" id="initiateBettingNext">Start with Next</button><br/>
+                <button class="btn btn-sm btn-primary btn-margin bet-button" id="initiateBettingSpecific">Start with Specific</button><br/>
                 <button class="btn btn-sm btn-danger btn-margin" id="initiateBettingCancel">Cancel</button><br/>
               </div>
             </div>
