--- a/client/index.html
+++ b/client/index.html
@@ -164,8 +164,10 @@
               <div class="col-xl-3">Deal:</div>
               <div class="col-xl-9">
                 <button class="btn btn-sm btn-light btn-margin" id="dealToAll">Deal to All</button><br/>
-                <button class="btn btn-sm btn-light btn-margin" id="dealToNext">Deal to Next</button><br/>
-                <button class="btn btn-sm btn-light btn-margin" id="dealToSpecific">Deal to Specific</button> 
+                <button class="btn btn-sm btn-light btn-margin" id="dealToNext">Deal to Next</button>
+                <button class="btn btn-sm btn-light btn-margin" id="dealToSpecific">Deal to Specific</button><br/>
+                <button class="btn btn-sm btn-secondary btn-margin" id="dealSpecialToNext">Special to Next</button>
+                <button class="btn btn-sm btn-secondary btn-margin" id="dealSpecialToSpecific">Special to Specific</button><br/>
               </div>
             </div>
             <div class="row row-padding">
