Prepare Project to Run Via Docker

--- a/client/index.html
+++ b/client/index.html
@@ -432,9 +432,9 @@
 <script src="./client/js/dealerController.js"></script>
 <script src="./client/js/betController.js"></script>
 <script src="./client/js/payoutController.js"></script>
-<script src="./client/js/HandPlayer.js"></script>
-<script src="./client/js/Hand.js"></script>
-<script src="./client/js/Card.js"></script>
+<script src="./client/js/handPlayer.js"></script>
+<script src="./client/js/hand.js"></script>
+<script src="./client/js/card.js"></script>
 <script src="./client/js/playerApp.js"></script>
 
 <script>
